--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<div id="intro">
 						<h1>Fortune The <br>Data Analyst <br>Portfolio<br />
 						</h1>
-						<p>Data Analyst skilled in SQL, Microfsoft Excel, Tableu and Python</p>
+						<p>Data Analyst skilled in SQL, Microsoft Excel, Tableu and Python</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
