--- a/index.html
+++ b/index.html
@@ -104,7 +104,20 @@
 											/blob/main/CalendarListings%20Visualization.twbx" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								
+
+									<article>
+									<header>
+										<h2><a href="https://github.com/chidiebe12/Fortune_Portfolio_projects
+											/blob/main/CalendarListings%20Visualization.twbx">Data Analysis And Visualzation With Power-BI</h2>
+									</header>
+									<a href="https://app.powerbi.com/links/zv1qGTXfqr?ctid=186288e7-0ad2-4a1d-9fef-eb828902c24a&pbi_source=linkShare" class="image fit"><img src="C:\Users\Laptop\Pictures\Screenshots\Screenshot 2025-10-04 184301.png" alt="" /></a>
+									<p>I did an in-depth analysis on a Sales Data and gave good visuals on the,, check them out
+									</p>
+									<ul class="actions special">
+										<li><a href="https://app.powerbi.com/links/zv1qGTXfqr?ctid=186288e7-0ad2-4a1d-9fef-eb828902c24a&pbi_source=linkShare"
+												class="button">Full Story</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
@@ -180,3 +193,4 @@
 
 	</body>
 </html>
+
