--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 
 									<article>
 									<header>
-										<h2><a href="https://github.com/chidiebe12/Fortune_Portfolio_projects
-											/blob/main/CalendarListings%20Visualization.twbx">Data Analysis And Visualzation With Power-BI</h2>
+										<h2><a href="https://app.powerbi.com/links/zv1qGTXfqr?ctid=186288e7-0ad2-4a1d-9fef-eb828902c24a&pbi_source=linkShare">
+											Data Analysis And Visualzation With Power-BI</h2>
 									</header>
-									<a href="https://app.powerbi.com/links/zv1qGTXfqr?ctid=186288e7-0ad2-4a1d-9fef-eb828902c24a&pbi_source=linkShare" class="image fit"><img src="images/images/Screenshot 2025-10-05 180909.png" alt="" /></a>
+									<a href="https://app.powerbi.com/links/zv1qGTXfqr?ctid=186288e7-0ad2-4a1d-9fef-eb828902c24a&pbi_source=linkShare" class="image fit"><img src="images/Screenshot 2025-10-05 180909.png" alt="" /></a>
 									<p>I did an in-depth analysis on a Sales Data and gave good visuals on the,, check them out
 									</p>
 									<ul class="actions special">
@@ -193,5 +193,6 @@
 
 	</body>
 </html>
+
 
 
