--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 											Data Analysis And Visualzation With Power-BI</h2>
 									</header>
 									<a href="https://app.powerbi.com/links/zv1qGTXfqr?ctid=186288e7-0ad2-4a1d-9fef-eb828902c24a&pbi_source=linkShare" class="image fit"><img src="images/Screenshot 2025-10-05 180909.png" alt="" /></a>
-									<p>I did an in-depth analysis on a Sales Data and gave good visuals on the,, check them out
+									<p>I did an in-depth analysis on a Sales Data and gave good visuals on them, check them out
 									</p>
 									<ul class="actions special">
 										<li><a href="https://app.powerbi.com/links/zv1qGTXfqr?ctid=186288e7-0ad2-4a1d-9fef-eb828902c24a&pbi_source=linkShare"
@@ -193,6 +193,7 @@
 
 	</body>
 </html>
+
 
 
 
